DON-172 - fix invisible loading spinners
This was a regression from more selective Material theming rolled out this morning

--- a/src/assets/scss/_mat-theme.scss
+++ b/src/assets/scss/_mat-theme.scss
@@ -69,6 +69,7 @@ $app-typography: mat-typography-config(
 @include mat-expansion-panel-theme($donate-theme);
 @include mat-form-field-theme($donate-theme);
 @include mat-menu-theme($donate-theme);
+@include mat-progress-spinner-theme($donate-theme);
 @include mat-radio-theme($donate-theme);
 @include mat-select-theme($donate-theme);
 @include mat-sidenav-theme($donate-theme);
